--- a/Ventanas/equipo.html
+++ b/Ventanas/equipo.html
@@ -51,9 +51,10 @@
             </ul>
         </div>
     </div>
-
+    <img src="../Assets/Images/formacion.jpeg" class="img_formacion">
     <div id="ct_equipo">
         <h1 class="titulo_plantilla">NUESTRA PLANTILLA</h1>
+
         <div>
             <h4 class="subtitulo_plantilla">NUESTRO CUERPO TÉCNICO: </h4>
             <table id="tabla_ct">
