--- a/Ventanas/noticia1.html
+++ b/Ventanas/noticia1.html
@@ -58,7 +58,7 @@
 
         <h1>La reserva se coloca como líder</h1>
         <h4>El equipo conducido por "el Rulo" Del Valle, esta a dos partidas de coronarse campeon de la copa de reserva</h4>
-        <img src="../Assets/Images/reserva.jpg" class="img_noticia_reserva">
+        <img src="../Assets/Images/reserva.jpeg" class="img_noticia_reserva">
         <p>El equipo de Rodrigo Del Valle disputó este martes por la mañana su partido de cuartos de final frente a Huracán y tuvo una definición muy emotiva. Luego del empate sin goles en los 90 minutos, el "witu" fue más efectivo desde los doce pasos y
             aseguró su lugar entre los cuatro mejores del certamen. <br><br> El We,Together tuvo buenas chances para ganarlo en el complemento, como un gran remate de Felipe Salomoni y otro de Federico Moreno en tiempo adicionado. Luego, llegó la hora
             de la definición por penales. <br><br> Por el lado del equipo dirigido por Del Valle marcaron Franco Alfonso, Lucas Monzón, Esteban Fernández y Joaquín Panichelli, mientras que el arquero rival le contuvo su remate a Peña. En tanto, Franco
