--- a/Ventanas/noticia2.html
+++ b/Ventanas/noticia2.html
@@ -59,7 +59,7 @@
         <h1>Qué tiene que pasar para que Luis Suárez llegue a River</h1>
         <h4>El delantero uruguayo, que se recupera de la rodilla, sigue de vacaciones en Ibiza a la espera de definir su futuro profesional. No le queda mucho margen de tiempo.
         </h4>
-        <img src="../Assets/Images/reserva.jpg" class="img_noticia_reserva">
+        <img src="../Assets/Images/suarez.jpg" class="img_noticia_reserva">
         <p>La novela por el 9 de River a raíz de la inminente salida de Julián Álvarez a Manchester City sumó un nuevo capítulo, otra vez con Luis Suárez como protagonista. Y es que desde las oficinas de Núñez creen que el uruguayo se va a tomar estos días,
             entre los octavos de final de la Copa Libertadores 2022, para decidir finalmente si viaja a Argentina.
             <br><br> Pero para eso tienen que darse dos condiciones. Si River pasa la serie contra Vélez y Suárez -continúa de vacaciones en Ibiza- no tiene ningún equipo serio en Europa en el que jugar, la ilusión crece para reforzar al equipo de Marcelo
