Tp corregido antes de presentar

--- a/Ventanas/equipo.html
+++ b/Ventanas/equipo.html
@@ -21,7 +21,7 @@
                 </li>
                 <li class="item_links">
                     <!--Link al equipo-->
-                    <a href="#top" class="underline_links">
+                    <a href="equipo.html" class="underline_links">
                         <p class="nav_text">EQUIPO</p>
                     </a>
                 </li>
