--- a/Ventanas/perfil.html
+++ b/Ventanas/perfil.html
@@ -34,7 +34,7 @@
                 </li>
                 <li class="item_links">
                     <!--Link al perfil-->
-                    <a href="#top" class="underline_links">
+                    <a href="perfil.html" class="underline_links">
                         <p class="nav_text">PERFIL</p>
                     </a>
                 </li>
