--- a/Ventanas/posicion.html
+++ b/Ventanas/posicion.html
@@ -27,7 +27,7 @@
                 </li>
                 <li class="item_links">
                     <!--Link a las posiciones-->
-                    <a href="#top" class="underline_links">
+                    <a href="posicion.html" class="underline_links">
                         <p class="nav_text">POSICION</p>
                     </a>
                 </li>
