--- a/Ventanas/noticia3.html
+++ b/Ventanas/noticia3.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>La reserva</title>
+    <title>Torneo de Padel</title>
     <link href="../Styles/styles.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
