Tp corregido antes de presentar

--- a/Ventanas/perfil.html
+++ b/Ventanas/perfil.html
@@ -78,7 +78,7 @@
                 <input type="radio" value="3" name="sexo" required> Otro
             </p>
             <p>Selecciona tu provincia:
-                <select id="select_provincias" class="provincias" required>
+                <select id="select_provincias" class="provincias" value="0">
                 <option value="BUENOS AIRES">BUENOS AIRES</option>
                 <option value="CATAMARCA">CATAMARCA</option>
                 <option value="CHACO">CHACO</option>
@@ -121,12 +121,12 @@
 
         <div class="container_usuario">
 
-            <p id="nombre_P"><span class="span_perfil">Nombre: </span></p>
-            <p id="mail_P"><span class="span_perfil">Mail: </span> </p>
-            <p id="fecha_P"><span class="span_perfil">Fecha: </span> </p>
-            <p id="sexo_P"><span class="span_perfil">Sexo: </span> </p>
-            <p id="provincia_P"><span class="span_perfil">Provincia: </span> </p>
-            <p id="jugador_P"><span class="span_perfil">Es jugador/a: </span> </p>
+            <p id="nombre_P"><span class="span_perfilN">Nombre: </span></p>
+            <p id="mail_P"><span class="span_perfilM">Mail: </span> </p>
+            <p id="fecha_P"><span class="span_perfilF">Fecha: </span> </p>
+            <p id="sexo_P"><span class="span_perfilS">Sexo: </span> </p>
+            <p id="provincia_P"><span class="span_perfilP">Provincia: </span> </p>
+            <p id="jugador_P"><span class="span_perfilJ">Es jugador/a: </span> </p>
             <p id="boton_reiniciar" class="botones_usuario">
                 <input type="button" value="Reiniciar" onclick="reiniciar()">
             </p>
