--- a/Ventanas/perfil.html
+++ b/Ventanas/perfil.html
@@ -72,11 +72,13 @@
             <p>Fecha de Nacimiento:
                 <input type="date" id="fecha_U" required value="" tabindex="2" />
             </p>
-            <p>Sexo:
-                <input type="radio" value="1" name="sexo" required> Hombre
-                <input type="radio" value="2" name="sexo" required> Mujer
-                <input type="radio" value="3" name="sexo" required> Otro
-            </p>
+            <div id="sexo_u">
+                <p>Sexo:</p>
+                <p id="sexo1"><input type="radio" value="1" required name="sexo"> Hombre</p>
+                <p id="sexo2"><input type="radio" value="2" required name="sexo"> Mujer</p>
+                <p id="sexo3"><input type="radio" value="3" required name="sexo"> Otro</p>
+
+            </div>
             <p>Selecciona tu provincia:
                 <select id="select_provincias" class="provincias" value="0">
                 <option value="BUENOS AIRES">BUENOS AIRES</option>
@@ -104,7 +106,7 @@
                 <option disabled="true" selected value="">-</option>
             </select>
             </p>
-            <p>
+            <p id="jugador_U">
                 Jugador/a ? :
                 <input type="radio" value="1" name="jugador" required> Si
                 <input type="radio" value="2" name="jugador" required> No
