--- a/Ventanas/perfil.html
+++ b/Ventanas/perfil.html
@@ -62,7 +62,7 @@
 
     <div id="form_perfil">
 
-        <form id="form" class="formulario_usuario">
+        <form id="form" class="formulario_usuario" name="formulario1">
             <p>Nombre:
                 <input type="text" id="nombre_U" required value="" tabindex="0" />
             </p>
@@ -106,34 +106,83 @@
                 <option disabled="true" selected value="">-</option>
             </select>
             </p>
-            <p id="jugador_U">
-                Jugador/a ? :
-                <input type="radio" value="1" name="jugador" required> Si
-                <input type="radio" value="2" name="jugador" required> No
-            </p>
+            <div id="jugador_u">
+                <p id="jugador_U">
+                    Jugador/a ? :
+                    <p id="jugador1"><input type="radio" value="1" name="jugador" onclick="agregarOpcion()"> Si</p>
+                    <p id="jugador2"><input type="radio" value="2" name="jugador" onclick="eliminarOpcion()"> No</p>
+                </p>
+            </div>
             <p class="botones_usuario">
                 <input type="button" value="Enviar" onclick="mostrarPerfil()">
-                <input type="reset" value="Borrar">
+                <input type="reset" value="Borrar" onclick="resetear()">
             </p>
-        </form>
+
+            <div id="select_posiciones" hidden>
+                <select id="posiciones" name="pos" onchange="cambia()">
+                    <option value="0"disabled="" selected>POSICION
+                    <option value="1">ARQUERO</option>
+                    <option value="2">DEFENSA</option>
+                    <option value="3">MEDIOCAMPISTA</option>
+                    <option value="4">DELANTERO</option>
+            </select>
+                <select id="numeros" name="opt">
+                    <option value="_" disabled="" selected>NUMERO
+            </select>
+            </div>
+            <script type="text/javascript">
+                // Definir Las Variables Posibles
+                var opt_1 = new Array('1', '12');
+                var opt_2 = new Array('2', '3', '4', '6');
+                var opt_3 = new Array('5', '7', '8', '10');
+                var opt_4 = new Array('9', '11');
+
+
+                function cambia() {
+                    var pos;
+                    //Se toma el valor de la "pos seleccionada"
+                    pos = document.formulario1.pos[document.formulario1.pos.selectedIndex].value;
+                    //se chequea si la "pos" esta definida
+                    if (pos != 0) {
+                        //selecionamos las variables correctas
+                        mis_opts = eval("opt_" + pos);
+                        //se calcula el numero de variables
+                        num_opts = mis_opts.length;
+                        //marco el numero de opcion en el select
+                        document.formulario1.opt.length = num_opts;
+                        //para cada opcion del array, la pongo en el select
+                        for (i = 0; i < num_opts; i++) {
+                            document.formulario1.opt.options[i].value = mis_opts[i];
+                            document.formulario1.opt.options[i].text = mis_opts[i];
+                        }
+                    } else {
+                        //si no habia ninguna opt seleccionada, elimino las poss del select
+                        document.formulario1.opt.length = 1;
+                        //ponemos un guion en la unica opt que he dejado
+                        document.formulario1.opt.options[0].value = "-";
+                        document.formulario1.opt.options[0].text = "-";
+                    }
+                    //hacer un reset de las opts
+                    document.formulario1.opt.options[0].selected = true;
+                }
+            </script>
     </div>
 
 
     <div id="info_perfil" hidden>
-
         <div class="container_usuario">
-
             <p id="nombre_P"><span class="span_perfilN">Nombre: </span></p>
             <p id="mail_P"><span class="span_perfilM">Mail: </span> </p>
             <p id="fecha_P"><span class="span_perfilF">Fecha: </span> </p>
             <p id="sexo_P"><span class="span_perfilS">Sexo: </span> </p>
             <p id="provincia_P"><span class="span_perfilP">Provincia: </span> </p>
             <p id="jugador_P"><span class="span_perfilJ">Es jugador/a: </span> </p>
+            <p id="posicion_P" hidden><span class="span_perfilJ">Posicion: </span> </p>
+            <p id="numero_P" hidden><span class="span_perfilJ">Dorsal: </span> </p>
             <p id="boton_reiniciar" class="botones_usuario">
                 <input type="button" value="Reiniciar" onclick="reiniciar()">
             </p>
         </div>
-
     </div>
 
     <div id="foot_perfil" class="footer_light_perfil">
