--- a/Ventanas/perfil.html
+++ b/Ventanas/perfil.html
@@ -70,7 +70,7 @@
                 <input type="email" id="mail_U" required value="" tabindex="1" />
             </p>
             <p>Fecha de Nacimiento:
-                <input type="date" id="fecha_U" required value="" tabindex="2" />
+                <input type="date" id="fecha_U" required value="" tabindex="2" max="2022-07-01" />
             </p>
             <div id="sexo_u">
                 <p>Sexo:</p>
